--- a/style.css
+++ b/style.css
@@ -1,206 +1,324 @@
 :root {
-    --background: #F8F8FF;
-  }
-  
-  html {
-    margin:0;
-    height: 100%;
-    width: 100%;
-    background: var(--background);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  
-  body {
-    margin:0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 75px;
-  }
-  
-  main {
-    padding: 75px;
-  }
-  
-  footer{
-    color: white;
-    background: teal;
-    padding: 75px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 25px;
-  }
+  --background: #F8F8FF;
+}
 
-  
-  .about {
-    min-height: 300px;
-    min-width: 50vw;
-    background: ghostwhite;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-    padding: 20px;
-  }
-  
-  .img {
-    min-width: 400px;
-    min-height: 450px;
-    background: lightgoldenrodyellow;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  }
-  
-  .gridContainer {
-    display: grid;
-    grid-gap: 50px;
-    grid-template-columns: repeat(auto-fit,minmax(350px, 1fr));
-    grid-template-rows: repeat(2, 1fr);
-    grid-auto-rows: 1fr;
-    margin-bottom:50px;
-  }
-  
-  .cell {
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    color: white;
-    font-weight: bolder;
-    font-size: xx-large;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+html {
+  margin: 0;
+  min-height: max-content;
+  min-width: 100%;
+  background: var(--background);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
-  }
+body {
+  min-height: 100%;
+  min-width: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-  .projectCard {
-    width: 100%;
-    height: 40%;
-    background: whitesmoke;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-  }
-  .projectTitle {
-    position: relative;
-    top: 75px;
-  }
-  
-  .info {
-    width: 600px;
-  }
-  .img2 {
-    width: 600px;
-    height:400px;
-    background: ghostwhite;
-  }
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 75px;
+  min-width: fit-content;
+}
 
-  .backdrop {
-    position: absolute;
-    z-index: -1;
-    height: 550px;
-    width: 100%;
-    background: teal;
-    clip-path: polygon(0 0, 100% 0, 100% 54%, 0% 100%);
+main {
+  padding: 75px;
+}
+
+footer {
+  color: white;
+  background: teal;
+  padding: 75px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 50px;
+  margin-top: auto;
+}
+
+
+.about {
+  min-height: 300px;
+  background: ghostwhite;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.img {
+  min-width: 350px;
+  min-height: 450px;
+  background: lightgoldenrodyellow;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  color: black;
+  font-weight: bold;
+  font-size: xx-large;
+  display: flex;  
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.name {
+  position: relative;
+  bottom: 20px;
+}
+
+.gridContainer {
+  min-width: fit-content;
+  display: grid;
+  grid-gap: 50px;
+  grid-template-columns: repeat(auto-fit, minmax(clamp(250px, 40dvw, 350px), 1fr));
+  grid-template-rows: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
+  margin-bottom: 50px;
+}
+
+.cell {
+  border-radius: 15px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  text-align: center;
+  font-weight: bolder;
+  font-size: xx-large;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  transition: transform 100ms ease-in-out ;
+  cursor: pointer;
+}
+
+.cell:hover {
+  transform: scale(1.1);
+}
+
+.projectCard {
+  width: 100%;
+  height: 40%;
+  background: whitesmoke;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.projectTitle {
+  position: relative;
+  top: 75px;
+}
+
+.info {
+  min-width: 50%;
+}
+
+.img2 {
+  min-width: 50%;
+  max-width: 75%;
+  height: 400px;
+  background: ghostwhite;
+}
+
+.backdrop {
+  position: absolute;
+  z-index: -1;
+  height: 550px;
+  min-width: 100%;
+  background: teal;
+  clip-path: polygon(0 0, 100% 0, 100% 54%, 0% 100%);
 }
 
 .one {
-    background: darkred;
-}
-.two {
-    background: lightpink;
-}
-.three {
-    background: lightgreen;
-}
-.four {
-    background: violet;
-}
-.five {
-    background: orange;
-}
-.six {
-    background: skyblue;
+  background: darkred;
 }
 
-@media screen and (max-width:1315px) {
+.two {
+  background: lightpink;
+}
+
+.three {
+  background: lightgreen;
+}
+
+.four {
+  background: violet;
+}
+
+.five {
+  background: orange;
+}
+
+.six {
+  background: skyblue;
+}
+
+.icon {
+  height: 25px;
+  width: 25px;
+}
+
+.bottom {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+
+}
+
+@media only screen and (min-width:921px) and (max-width:1315px) {
   header {
     position: relative;
     top: 100px;
     display: block;
     margin: auto;
-    align-items: start;
+    min-width: fit-content;
+  }
+
+  footer {
+    color: white;
+    background: teal;
     padding: 75px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 50px;
+    margin-top: auto;
+  }
+
+  .info {
+    min-width: 50%;
+  }
+
+  .img2 {
+    min-width: 50%;
+    height: 400px;
+    background: ghostwhite;
   }
 
   .about {
     text-align: left;
-    width: 700px;
     height: 400px;
-    min-width: 300px;
     min-height: 300px;
+    max-width: 650px;
     background: ghostwhite;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     padding: 20px;
+    display: block;
   }
 
-  h1, 
+  h1,
   .text {
     position: relative;
     right: 50px;
   }
-  
+
   .img {
     float: left;
     position: relative;
     right: 76px;
     bottom: 90px;
-    min-width: 400px;
     min-height: 450px;
     background: lightgoldenrodyellow;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    display: flex;  
+    justify-content: center;
+    align-items: flex-start;
   }
+
+  .name {
+    position: relative;
+    top:25px;
+    left: 280px;
+  }
+
+  .bottom {
+    margin-top: 50px;
+    }
+    
 }
 
 
 @media screen and (max-width:920px) {
   header {
-    position: relative;
-    top: 100px;
-    display: block;
-    margin: auto;
-    align-items: start;
-    padding: 75px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+    padding: 20px;
+    padding-top: 80px;
+    min-width: 89%;
+
   }
 
   .about {
-    text-align: left;
-    width: 700px;
-    height: 400px;
-    min-width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     min-height: 300px;
-    background: ghostwhite;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-    padding: 20px;
+    background: var(--background);
+    box-shadow: none;
   }
 
-  h1, 
-  .text {
-    color: red;
-    position: relative;
-    right: 50px;
-  }
-  
   .img {
-    float: left;
     position: relative;
-    right: 76px;
-    bottom: 90px;
-    min-width: 400px;
     min-height: 450px;
     background: lightgoldenrodyellow;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   }
+
+  .gridContainer {
+    display: grid;
+    grid-gap: 50px;
+    grid-template-columns: repeat(auto-fit, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-auto-rows: 1fr;
+    margin-bottom: 50px;
+  }
+
+  main {
+    padding: 20px;
+    margin:50px;
+    min-width: fit-content;
+  }
+
+  footer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+    padding:20px;
+    min-width: 90%;
+
+  }
+
+  .backdrop {
+    width: 150px;
+  }
+
+  .info {
+    min-width: fit-content;
+  }
+  
+  .img2 {
+    min-width: 100%;
+    height: 400px;
+    background: ghostwhite;
+  }
+  
+  html{
+    padding: 0px;
+    margin:0px;
+    }
+
 }
